--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,69 @@
+name: Build & Release
+
 on:
-  pull_request:
-    branches:
-      - main
-      - sunil
   push:
     branches:
       - main
       - sunil
-name: "Build & Release"
+  pull_request:
+    branches:
+      - main
+      - sunil
+
 jobs:
   build:
-    name: Build & Release
     runs-on: macos-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      # 1️⃣ Checkout code
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      # 2️⃣ Setup Java 17 (Required for Flutter Android)
+      - name: Setup Java
+        uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
-          java-version: '12'
-      - uses: subosito/flutter-action@v2
+          java-version: '17'
+
+      # 3️⃣ Setup Flutter
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          architecture: x64
 
-      - run: flutter build apk --release --split-per-abi
-      - run: |
-          flutter build ios --no-codesign
+      # 4️⃣ Install dependencies
+      - name: Install Dependencies
+        run: flutter pub get
+
+      # 5️⃣ Flutter Doctor (Debug info)
+      - name: Flutter Doctor
+        run: flutter doctor -v
+
+      # 6️⃣ Build Android APK
+      - name: Build Android APK
+        run: flutter build apk --release --split-per-abi
+
+      # 7️⃣ Build iOS (No Code Sign)
+      - name: Build iOS
+        run: flutter build ios --release --no-codesign
+
+      # 8️⃣ Create IPA file
+      - name: Create IPA
+        run: |
           cd build/ios/iphoneos
           mkdir Payload
           cd Payload
           ln -s ../Runner.app
           cd ..
           zip -r app.ipa Payload
-      - name: Push to Releases
+
+      # 9️⃣ Upload Release
+      - name: Push to GitHub Releases
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/apk/release/*,build/ios/iphoneos/app.ipa"
+          artifacts: |
+            build/app/outputs/apk/release/*.apk
+            build/ios/iphoneos/app.ipa
           tag: v1.0.${{ github.run_number }}
-          token: ${{ secrets.TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
